Fix the issue that main website cannot fit into the mobile screen

--- a/microbit-main/src/components/embeded-page/embeded-page.scss
+++ b/microbit-main/src/components/embeded-page/embeded-page.scss
@@ -1,9 +1,10 @@
 .embeded-page {
     flex: 1 1 auto;
     width: 100%;
+    display: flex;
+    justify-content: stretch;
     iframe {
         width: 100%;
-        height: 100%;
         border: none;
     }
 }
